Make warnings in Java code fatal (#28402)